--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,23 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/addressbook
+    username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
     sql-script-encoding: utf-8
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: lxw.addressbook.addressbook.mapper
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
+lxw:
+  redis:
+    cache:
+      addr: 127.0.0.1
+      port: 6379
+      password: 123456
+      maxActive: 1024
+      maxIdle: 200
+      maxWait: 10000
+      timeout: 10000
+      testOnBorrow: true
