--- a/pom.xml
+++ b/pom.xml
@@ -91,11 +91,30 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
-        <!-- 引入wechat-api -->
+        <!-- 引入wechat-api 用于网页版微信操作 -->
         <dependency>
             <groupId>io.github.biezhi</groupId>
             <artifactId>wechat-api</artifactId>
             <version>1.0.6</version>
+        </dependency>
+
+        <!-- webSocket 依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>1.3.5.RELEASE</version>
+        </dependency>
+
+        <!-- rabbitmq 依赖 -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>4.2.0</version>
         </dependency>
     </dependencies>
 
